# SysMinitor

./: .gitignore  API.md  CMakeLists.txt  README.md
docs/: 开发环境搭建.md  新建文本文档.txt
src/: main.cpp
src/core/: DataCollector.cpp  DataCollector.h  SnapshotComparator.cpp  SnapshotComparator.h  SnapshotManager.cpp  SnapshotManager.h  SystemSnapshot.cpp  SystemSnapshot.h  SystemSnapshotCollector.h  stdafx.h
src/core/CPUInfo/: cpu_monitor.cpp  cpu_monitor.h  system_info.h  wmi_helper.cpp  wmi_helper.h
src/core/Disk/: disk_monitor.cpp  disk_monitor.h
src/core/Driver/: driver_monitor.cpp  driver_monitor.h
src/core/Memory/: memory_monitor.cpp  memory_monitor.h
src/core/Process/: process_monitor.cpp  process_monitor.h
src/core/Register/: registry_monitor.cpp  registry_monitor.h
src/server/: WebServer.cpp  WebServer.h
src/utils/: AsyncLogger.cpp  AsyncLogger.h  encode.cpp  encode.h  registry_encode.cpp  registry_encode.h  util_time.h
webclient/: RegisterAPI.json  api.md  index.html  main.js  outline.md  report.html  settings.html  snapshot.html  test.html  test2.html  界面设计.txt
webclient/assets/css/: fonts.css
www/: index.html
