cmake_minimum_required(VERSION 3.20)
project(SystemSnapshotTool LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# add_compile_options(/utf-8)

# è®¾ç½®è¾“å‡ºç›?å½? - è¿™æ˜¯å…³é”®ä¿?æ”¹ï¼
if(CMAKE_CONFIGURATION_TYPES)
    # å¤šé…ç½?ç”Ÿæˆå™?ï¼ˆVisual Studioï¼?
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
else()
    # å•é…ç½?ç”Ÿæˆå™?
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/$<CONFIG>)
endif()

if(MSVC)
    add_compile_options(/W4 /Zi)  # æ·»åŠ è°ƒè¯•ä¿¡æ¯
    add_link_options(/DEBUG)      # ç”ŸæˆPDBæ–‡ä»¶
    add_compile_options("$<$<C_COMPILER_ID:MSVC>:/source-charset:GB2312>")
    add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/source-charset:GB2312>")
    
    # è®¾ç½®æ‰§è?Œå­—ç¬¦é›†ï¼ˆå¯é€‰ï¼‰
    add_compile_options("$<$<C_COMPILER_ID:MSVC>:/execution-charset:GB2312>")
else()
    add_compile_options(-Wall -Wextra -Wpedantic -g)
endif()

# å?æ‰§è?Œæ–‡ä»?
add_executable(SnapshotTool
    src/main.cpp
    src/core/SystemSnapshot.cpp
    src/core/DataCollector.cpp
    src/core/SnapshotManager.cpp
    src/core/SnapshotComparator.cpp
    src/core/CPUInfo/cpu_monitor.cpp
    src/core/Process/process_monitor.cpp
    src/core/Disk/disk_monitor.cpp
    src/core/CPUInfo/wmi_helper.cpp
    src/server/WebServer.cpp
)

# åŒ…å«ç›?å½?
target_include_directories(SnapshotTool PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/third_party
    ${CMAKE_CURRENT_SOURCE_DIR}/src
)

set_target_properties(SnapshotTool PROPERTIES
    OUTPUT_NAME "SnapshotTool"
)

# ç‰¹åˆ«ä¸ºVisual Studioè®¾ç½®è°ƒè¯•å™¨å·¥ä½œç›®å½?
if(MSVC)
    set_target_properties(SnapshotTool PROPERTIES
        VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}"
    )
endif()
# Windows åº“é“¾æ?
if(WIN32)
    target_link_libraries(SnapshotTool
        advapi32    # æ³¨å†Œè¡¨æ“ä½?
        psapi       # è¿›ç¨‹ä¿¡æ¯
        pdh         # æ€§èƒ½æ•°æ®
        wtsapi32
        setupapi
        ws2_32      # Winsock (HTTPåº“éœ€è¦?)
        kernel32
        wbemuuid
        ole32
        oleaut32
    )
endif()

# è·å–è¾“å‡ºç›?å½•ï¼ˆå? exe æ‰€åœ¨è·¯å¾„ï¼‰
set(OUTPUT_DIR ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})

# æ„å»ºå®Œæˆåï¼ŒæŠ? ${CMAKE_SOURCE_DIR}/webclient å¤åˆ¶åˆ°è¾“å‡ºç›®å½?
add_custom_command(TARGET SnapshotTool POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_directory
        "${CMAKE_SOURCE_DIR}/webclient"
        "$<TARGET_FILE_DIR:SnapshotTool>/webclient"
    COMMENT "Copying webclient to output directory"
)

# å®‰è?…ç›®æ ?
install(TARGETS SnapshotTool RUNTIME DESTINATION bin)